# flask-react-led-control

./: .envrc  Procfile  Readme.md
backend/: api.py  constants.py  led.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  PresetSelect.tsx  requestHook.ts
