[tool.poetry]
name = "led control"
version = "0.1.0"
description = ""
authors = ["rakvat <rakvat@users.noreply.github.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"

[tool.poetry.group.dev.dependencies]
honcho = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
